<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_destino"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgDestino"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp">

            <RadioButton
                android:id="@+id/rbParis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_paris" />

            <RadioButton
                android:id="@+id/rbLondres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_londres" />

            <RadioButton
                android:id="@+id/rbRoma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_roma" />
        </RadioGroup>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lbl_transporte"
        android:textSize="16sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/rgTransporte"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="80dp">

            <RadioButton
                android:id="@+id/rbCoche"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_coche" />

            <RadioButton
                android:id="@+id/rbTren"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_tren" />

            <RadioButton
                android:id="@+id/rbAvion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rb_avion" />
        </RadioGroup>
    </LinearLayout>

    <Button
        android:id="@+id/btnInformacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:backgroundTint="@color/btn_informacion"
        android:text="@string/button_Informacion"
        android:textSize="20sp" />
</LinearLayout>